# purple-rs

./: CHANGELOG.md  Cargo.toml
examples/: async.rs
src/: chat.rs  conversation.rs  hashtable.rs  lib.rs  loader.rs  logger.rs  prpl.rs  status_type.rs
src/account/: mod.rs
src/connection/: connections.rs  mod.rs  protocol_data.rs
src/handlers/: entrypoints.rs  traits.rs
src/task/: mod.rs
