[package]
name = "purple-rs"
version = "0.1.0"
authors = ["isra17 <isra017@gmail.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"
description = "A mostly rusty and safe wrapper of libpurple"
repository = "https://github.com/Flared/purple-rs"
keywords = ["purple", "chat", "plugin"]
categories = ["api-bindings"]

[dependencies]
libc = "^0"
glib-sys = "^0"
glib = "^0"
purple-sys = { package = "purple-sys-flared", version = "^0" }
serde = { version = "^1", features = ["derive"] }
log = "^0"
lazy_static = "^1"
paste = "^1"
futures = "^0"

[[example]]
name = "async"
crate-type = ["dylib"]
